package sokoban.view;

import javafx.scene.layout.GridPane;

abstract class GridView extends GridPane {

}
